# ChangeLog for dev-java/javassist
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/javassist/ChangeLog,v 1.30 2014/08/10 20:16:42 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> javassist-2.6-r1.ebuild,
  javassist-3.14.0.ebuild, javassist-3.4.ebuild, javassist-3.7.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  10 Mar 2012; Brent Baude <ranger@gentoo.org> javassist-3.14.0.ebuild:
  Marking javassist-3.14.0 ppc for bug 356931

  19 Mar 2011; Thomas Kahle <tomka@gentoo.org> javassist-3.14.0.ebuild:
  x86 stable per bug 356931

  01 Mar 2011; Markos Chandras <hwoarang@gentoo.org> javassist-3.14.0.ebuild:
  Stable on amd64 wrt bug #356931

*javassist-3.14.0 (30 Jan 2011)

  30 Jan 2011; Miroslav Šulc <fordfrog@gentoo.org> +javassist-3.14.0.ebuild:
  Version bump

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  javassist-2.6-r1.ebuild, javassist-3.4.ebuild:
  Transfer Prefix keywords for all SLOTs

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org> javassist-3.7.ebuild:
  Transfer Prefix keywords

  25 Oct 2008; nixnut <nixnut@gentoo.org> javassist-3.7.ebuild:
  Stable on ppc wrt bug 243128

  23 Oct 2008; Markus Meier <maekke@gentoo.org> javassist-3.7.ebuild:
  amd64/x86 stable, bug #243128

  30 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> javassist-3.4.ebuild,
  javassist-3.7.ebuild:
  Fixed IUSE QA issue

  05 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
  -files/javassist-3.1_rc2-classpath.patch:
  Remove unused patch.

*javassist-3.7 (05 Apr 2008)

  05 Apr 2008; Petteri Räty <betelgeuse@gentoo.org> +javassist-3.7.ebuild:
  Version bump. Fixes bug #216250.

  31 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> javassist-3.4.ebuild:
  amd64 stable, bug #214775

  30 Mar 2008; Markus Rothe <corsair@gentoo.org> javassist-2.6-r1.ebuild,
  javassist-3.4.ebuild:
  Added ~ppc64

  28 Mar 2008; Christian Faulhammer <opfer@gentoo.org> javassist-3.4.ebuild: