@@ -6,15 +6,20 @@ DIST javassist-3.14.0-GA.zip 2258443 SHA256 8a6070659f3409cd23392bcdf29b86232666
 DIST javassist-3.4.zip 1714086 SHA256 0f7dc85472d72acf4c74a47ce0d62462218709c6a2f272dc9785e17a524ccaff SHA512 601616cdde208cef536af8ebf20a9ee43178871e8b1ebf892dae63ebb0d9e11e742091ac781a46018d968674ce918864ebc5de5951d05a345d0ea60c9dfa7c04 WHIRLPOOL 09deaef9c992a379d16a86937456bd45bc982d5ab4f95bd7ae4095cf378200918701ce1fa50a1ba1b00186aef5386986bd81de83c19baa4f56388e1d444f1eea
 DIST javassist-3.7.GA.zip 1918656 SHA256 239cea00bbc674b1430ae371003f76173d531412ca1d5fff7fc223b671a03524 SHA512 3ef38287488c54886937b2aef9fd9667e5f109816913419152ab709517de63625b7b9d0af3cc5aedc66fb2ad880db10a975475b22bfaa72464fee11fcf1f6060 WHIRLPOOL 3193bc2d0c64a073d168216137b53879df098db60e6f22ecae4cffef2229f4346c1480774ba44e7f0055183e63b0fea26b0d5e0aabce908de321b87d7c35b31f
 EBUILD javassist-2.6-r1.ebuild 911 SHA256 6c5b0c27ef22499c6445504cac294c3372b25a7e23daae3d567e67839669593a SHA512 ee3bc8bd621ab4ef285e285f22edc31a87511aedca9ef928424c9e4aa2cc083e1abb8adf965f9bdd7467accb6c371231cd17df1a31266599e82e0bf476d0666e WHIRLPOOL 216fefcdfc5b08a1e29a46acd33d7374f2655e3b26093b91aabc106f570b8e3a9127a7255c54fd86a3bc017acc5719d15c86dd2f7dae6484999e62b1b1b5ba6b
+EBUILD javassist-2.6-r2.ebuild 880 SHA256 0dc14474fd2d9a3cbd9b6399a310d75ec8e9a2e32777b76a3b9bd056cabcbb1a SHA512 878e30236c2365b6f45846b2c483a4686472062a4d1c6ea40e2729c777e5a9c5a385e30b54b225d22a23bde43ea0f42fe6d87b3cad724c3374fce4e714f82d98 WHIRLPOOL 2c3e720e4dfe1f340e0328c636bbbd648447437c2dce0b17d0cba6cd8add3d1efdb8cc515865dd1976b4d7dc7f45f3bfe9d52b9ab42190ffe59c7e64da0202c3
 EBUILD javassist-3.14.0.ebuild 1050 SHA256 38f29c08533367ca53d7c83d31d84abaeb65c2ccc66bce78e87a20a9a819ff35 SHA512 82fb93e38c6faa7ed85f6a275a0183c29f72f8787b49f05889f0df843835f4f6836a8381f05341ce33c1aae6c15c9eaa709a05237ed59c3ce8ef7df1b725889d WHIRLPOOL 3fb3f83af396c233298b6663320cac36b247b5069fae23934eb769a6c25f75398c6e438160ed1953abe9e26236c2872d5efa34a4ffdefa30e179a3da3d67a9c8
 EBUILD javassist-3.4.ebuild 1034 SHA256 18f0a266af042a07b0b9721988d4e08c7cb7d40a1dbf39754437ef01220a3fd2 SHA512 83a2b955f5784fa99511bd3f3387944f827840c37a19a9c50b108a499784816fd9b79b2df671db8d22e362e94ac62aa4e6b1e67be776806a6c156cd20720615e WHIRLPOOL 8db869be43f62f47f6bc2c975717fa978c0fa3ed3e6cbe4ccde817d3c2f7c92047902efed339d635c0ba61cb63979f7bafa4ca40fb14fa600406a223760dcc43
 EBUILD javassist-3.7.ebuild 1048 SHA256 0c02a39ced65c2ea1076b67380e2dc6f557b46b6f48727a8fdfa98ddec1eb0a0 SHA512 05aaa33ea7ea0723f1bd13add6d87565cd25817774cb1e307982bedcfd822c797db91fc376b051d5b7bdd77d6a9ac8abcc8d75bbe26eaea32ea9e20b45a74f3a WHIRLPOOL 288375b8bb6fc6c9e518e5bcf5219df71a90ff1e90be667f8be5d3ec31350c53cbb6927d9f79e122a13126f5e23e010b516cb0c59a5afdc9507e6533e18f2cae
-MISC ChangeLog 4239 SHA256 43dccf80e96e1379be92b00805bc241ad8c23800859675c3136158cc104a46c1 SHA512 3d323b8d31cc00dd5331d82b4da236abadcb07eb9a394f57b59d574d9e2db829cb8b75bd9f5ea973f3d8643acedaa0f542712d49d73aeef0721e6862bcdf7698 WHIRLPOOL 4c9432b59e1697104d8ebc5bb3cac4f3b508ddfb94c33dedb1a54c5c413788b363d3d3483a120e4a32e1ff912d0fe3af7158ef96f12cfa3a7113ae09aa2e1ea4
+MISC ChangeLog 4382 SHA256 f9bcae001a6011a24ee2d1b3c151a2dcb1f13fa5ed1fec52a449214aacac7b4e SHA512 3fe0459dfe89cf10155f391f951816cb4a94bfc2c6c9afe5f53a64802f6da36754855dcebc95ee1cc37d4fbd1d9da677a84789829b95617dadf05e3ac715f1a9 WHIRLPOOL de561c0519080a12e5cd851d56a15355b81728a922648339f3b618b84b80eaf5419f037f7be1fc30a8d5907a52def8b0e87990ad93372460e727d0dc0fcf03ca
 MISC metadata.xml 158 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb SHA512 54f88fc3270968439ba87295b04365a89101c55d33a8c209a56036dc60244e5c73f78ec09484b3e5af28de9dee2159b1dab670cbd5d80a9e0c4543145c0390a3 WHIRLPOOL fcffc4fb6751b5a6eec33aa833f9d7dea0168d3ab67f7e34565370f92fd917ed882bcc57585481bf4d31e601f83a592d99d1c3f50fc793f1c38cd174cc8b2f26
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn0yoACgkQcaHudmEf86oTgwCfdznwyJw6T974QiLsbxAEMB0U
-4JUAn0brPDTbn8UmsiH+3yUVw9/GPwZm
-=O1mO
+iQEcBAEBCAAGBQJUDAimAAoJEKCEBkJ3xQHtHtkH/02s0dL/YuxT0ux7y9Qqfv+p
+bG8bA2wYR5LaJxjLCtvV2AMvDdokYj44meWohBCLahPqHonx3JvxSi1im3LVqiDu
+kqERIr07wYQRf2J2mTtk55hDn/pGFkiPCaGt6djrgXIaTkUGtWoq6Z7t23jcphKY
+QWKhWwKPsVNyR8ZkZ1JhZJgSrmAPv5FnuEeAGaks3aVWna7ecykZkC/pbs8NU1YV
+mxoVqx6/apUsOm/zKvdy3JdVS9g3TJzjt9XpU4Acz3bmrkx+z30yV6AMvIXD6YtN
+XGjowVSuScqx0EPOTCcP6TzSqI45Jcyp5HwTFt/ksx6RoaqxPP2bYvkZ9/jsilY=
+=fvRh
 -----END PGP SIGNATURE-----
