@@ -1,0 +1,33 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javassist/javassist-2.6-r2.ebuild,v 1.1 2014/09/07 07:26:26 ercpe Exp $
+
+EAPI=5
+
+JAVA_PKG_IUSE="doc source examples"
+
+inherit java-pkg-2 java-ant-2
+
+DESCRIPTION="Javassist makes Java bytecode manipulation simple"
+SRC_URI="mirror://sourceforge/jboss/${P}.zip"
+HOMEPAGE="http://www.csg.is.titech.ac.jp/~chiba/javassist/"
+
+LICENSE="MPL-1.1"
+SLOT="2"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux"
+IUSE=""
+
+RDEPEND=">=virtual/jre-1.4"
+DEPEND=">=virtual/jdk-1.4
+	app-arch/unzip"
+S="${WORKDIR}"
+
+EANT_DOC_TARGET="javadocs"
+
+src_install() {
+	java-pkg_dojar ${PN}.jar
+	java-pkg_dohtml *.html
+	use doc && java-pkg_dojavadoc html
+	use source && java-pkg_dosrc src/main/javassist
+	use examples && java-pkg_doexamples sample/*
+}
